ingress.yml
# ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: config.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: config-server-service
            port:
              number: 8088
  - host: hello.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 8081
  - host: world.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: world-service
            port:
              number: 8082
  - host: hello-world.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 8083
